--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
             <table class="slide-table" width="100%" align="center">
                 <tbody>
                  <tr>
-                        <th colspan="2" width="90%" class="prompt_title_blue" align="center">A patio chair</th>
+                        <th colspan="2" width="90%" class="prompt_title_blue" align="center">A funky swivel chair</th>
                     </tr>
                     <tr>
                         <td colspan="2">
                             <video loop autoplay  muted width="95%"  class="result-video">
-                                <source src="webpage_assets/videos/patio.mp4" type="video/mp4">
+                                <source src="webpage_assets/videos/swivel.mp4" type="video/mp4">
                             </video>
                         </td>
                     </tr>
