--- a/index.html
+++ b/index.html
@@ -162,12 +162,12 @@
             <table class="slide-table" width="100%" align="center">
                 <tbody>
                     <tr>
-                        <th colspan="2" width="90%" class="prompt_title_red" align="center">An old lantern</th>
+                        <th colspan="2" width="90%" class="prompt_title_red" align="center">A candle</th>
                     </tr>
                     <tr>
                         <td colspan="2">
                             <video loop autoplay  muted width="95%"  class="result-video">
-                                <source src="webpage_assets/videos/lantern.mp4" type="video/mp4">
+                                <source src="webpage_assets/videos/candle.mp4" type="video/mp4">
                             </video>
                         </td>
                     </tr>
@@ -187,12 +187,12 @@
             <table class="slide-table" width="100%" align="center">
                 <tbody>
                     <tr>
-                        <th colspan="2" width="90%" class="prompt_title_blue" align="center">A billiard table</th>
+                        <th colspan="2" width="90%" class="prompt_title_blue" align="center">A spaceship</th>
                     </tr>
                     <tr>
                         <td colspan="2">
                             <video loop autoplay muted width="95%"  class="result-video">
-                                <source src="webpage_assets/videos/billiard.mp4" type="video/mp4">
+                                <source src="webpage_assets/videos/spaceship.mp4" type="video/mp4">
                             </video>
                         </td>
                     </tr>
