--- a/index.html
+++ b/index.html
@@ -291,6 +291,35 @@
 <!--        </div>-->
     </section>
 
+    <!-- abstract -->
+    <section class="interactive-section" width="100%">
+        <div class="abstract-container has-text-justified">
+            <hr>
+            <!-- <h2 align="center">Interactive Results</h2> -->
+            <table class="interactive-table" width="100%" align="center">
+                <tr>
+                    <td align="center" width="20%">
+                        <button class="prompt_title_black" onclick="playVideo('video1', '')">abstract table 1</button><br></br><br></br>
+                        <button class="prompt_title_black" onclick="playVideo('video2', '')">abstract table 2</button><br></br><br></br>
+                        <button class="prompt_title_black" onclick="playVideo('video3', '')">abstract table 3</button><br></br><br></br>
+                        <button class="prompt_title_black" onclick="playVideo('video4', '')">abstract table 4</button>
+                    </td>
+                    <td align="center">
+                        <video id="videoPlayer" loop autoplay  muted width="50%"  class="result-video">
+                            <source src="./webpage_assets/videos/interactive/video1.mp4" type="video/mp4">
+                        </video>
+                    </td>
+                    <td align="center" width="20%">
+                        <button class="prompt_title_blue" onclick="switchVideo('_a')">a billiard table</button><br></br><br></br>
+                        <button class="prompt_title_blue" onclick="switchVideo('_b')">a glass table</button><br></br><br></br>
+                        <button class="prompt_title_blue" onclick="switchVideo('_c')">a ping pong table</button><br></br><br></br>
+                        <button class="prompt_title_blue" onclick="switchVideo('_d')">a round coffee table</button>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </section>
+
     <!-- method -->
     <section class="method-section" width="100%">
         <div class="method-container">
@@ -374,6 +403,32 @@ const swiper = new Swiper('.swiper', {
       prevEl: '.swiper-button-prev',
     },
   });
+</script>
+
+<script>
+    let currentVideo = "video1";
+    let currentSuffix = "";
+
+    function playVideo(newVideo, newSuffix) {
+        if (currentVideo === newVideo & currentSuffix == newSuffix) return
+
+        const videoPlayer = document.getElementById('videoPlayer');
+
+        currentTime = videoPlayer.currentTime;
+        videoPlayer.src = "./webpage_assets/videos/interactive/" + newVideo + newSuffix + ".mp4";
+        videoPlayer.addEventListener('loadedmetadata', function() {
+            videoPlayer.currentTime = currentTime;
+            videoPlayer.removeEventListener('loadedmetadata', arguments.callee);
+        });
+        videoPlayer.play();
+        currentVideo = newVideo;
+        currentSuffix = newSuffix;
+    }
+
+    function switchVideo(newSuffix) {
+        if (currentSuffix === newSuffix) return
+        playVideo(currentVideo, newSuffix);
+    }
 </script>
 
 </body></html>
