updating intro text

--- a/index.html
+++ b/index.html
@@ -253,10 +253,9 @@
                     text-conditional 3D shapes that enforce task-specific structural priors from auxiliary
                     guidance shapes (denoted by <span class="video-label-text">Guidance</span> above). Our approach supports
                     different 3D editing tasks, such as: semantic shape editing
-                    (<span class="prompt_title_green">text colored in green above</span>),
-                    text-conditional Abstraction-to-3D, which transforms a primitive-based abstraction into a highly
-                    expressive shape (<span class="prompt_title_blue">text colored in blue above</span>) and 3D stylization
-                    (<span class="prompt_title_red">text colored in red above</span>), all enabled within seconds.
+                    (performing semantic modifications over the input guidance shape; <span class="prompt_title_green">text colored in green above</span>),
+                    text-conditional Abstraction-to-3D (transforming primitive-based abstractions into highly expressive shapes; <span class="prompt_title_blue">text colored in blue above</span>) and 3D stylization
+                    (stylizing the uncolored guidance shape according to the target text prompt; <span class="prompt_title_red">text colored in red above</span>), all enabled within seconds.
                 </p>
             </div>
         </div>
