--- a/index.html
+++ b/index.html
@@ -294,21 +294,23 @@
     <section class="interactive-section" width="100%">
         <div class="abstract-container has-text-justified">
             <hr>
-            <!-- <h2 align="center">Interactive Results</h2> -->
+            <h2 align="center">Examples of Text-conditional Abstraction-to-3D Results</h2>
             <table class="interactive-table" width="100%" align="center">
                 <tr>
                     <td align="center" width="20%">
+                        <br></br>
                         <button class="prompt_title_black" onclick="playVideo('video1', '')">abstract table 1</button><br></br><br></br>
                         <button class="prompt_title_black" onclick="playVideo('video2', '')">abstract table 2</button><br></br><br></br>
                         <button class="prompt_title_black" onclick="playVideo('video3', '')">abstract table 3</button><br></br><br></br>
                         <button class="prompt_title_black" onclick="playVideo('video4', '')">abstract table 4</button>
                     </td>
                     <td align="center">
-                        <video id="videoPlayer" loop autoplay  muted width="50%"  class="result-video">
+                        <video id="videoPlayer" loop autoplay  muted width="60%"  class="result-video">
                             <source src="./webpage_assets/videos/interactive/video1.mp4" type="video/mp4">
                         </video>
                     </td>
                     <td align="center" width="20%">
+                        <br></br>
                         <button class="prompt_title_blue" onclick="switchVideo('_a')">a billiard table</button><br></br><br></br>
                         <button class="prompt_title_blue" onclick="switchVideo('_b')">a glass table</button><br></br><br></br>
                         <button class="prompt_title_blue" onclick="switchVideo('_c')">a ping pong table</button><br></br><br></br>
