--- a/index.html
+++ b/index.html
@@ -299,10 +299,10 @@
                 <tr>
                     <td align="center" width="20%">
                         <br></br>
-                        <button class="prompt_title_black" onclick="playVideo('video3', '')">abstract table 1</button><br></br><br></br>
-                        <button class="prompt_title_black" onclick="playVideo('video2', '')">abstract table 2</button><br></br><br></br>
-                        <button class="prompt_title_black" onclick="playVideo('video1', '')">abstract table 3</button><br></br><br></br>
-                        <button class="prompt_title_black" onclick="playVideo('video4', '')">abstract table 4</button>
+                        <button class="prompt_title_black" onclick="playVideo('video3', '')">Abstraction #1</button><br></br><br></br>
+                        <button class="prompt_title_black" onclick="playVideo('video2', '')">Abstraction #2</button><br></br><br></br>
+                        <button class="prompt_title_black" onclick="playVideo('video1', '')">Abstraction #3</button><br></br><br></br>
+                        <button class="prompt_title_black" onclick="playVideo('video4', '')">Abstraction #4</button><br></br>
                     </td>
                     <td align="center">
                         <video id="videoPlayer" loop autoplay  muted width="70%"  class="result-video">
@@ -311,10 +311,10 @@
                     </td>
                     <td align="center" width="25%">
                         <br></br>
-                        <button class="prompt_title_blue" onclick="switchVideo('_a')">a billiard table</button><br></br><br></br>
-                        <button class="prompt_title_blue" onclick="switchVideo('_b')">a glass table</button><br></br><br></br>
-                        <button class="prompt_title_blue" onclick="switchVideo('_c')">a ping pong table</button><br></br><br></br>
-                        <button class="prompt_title_blue" onclick="switchVideo('_d')">a round coffee table</button>
+                        <button class="prompt_title_blue" onclick="switchVideo('_a')">A billiard table</button><br></br><br></br>
+                        <button class="prompt_title_blue" onclick="switchVideo('_b')">A glass table</button><br></br><br></br>
+                        <button class="prompt_title_blue" onclick="switchVideo('_c')">A ping pong table</button><br></br><br></br>
+                        <button class="prompt_title_blue" onclick="switchVideo('_d')">A round coffee table</button><br></br>
                     </td>
                 </tr>
             </table>
