--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<div class="page-container" >
+<div class="page-container">
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
     <!-- title -->
-    <h1 class="ourh1" align="center">SPiC&middot;E <inline-img><img src=".\webpage_assets\images\chili.png" alt="" width=52 height=52></inline-img></h1>
+    <h1 class="ourh1" align="center">SPiC&middot;E <img class="inline-img" src=".\webpage_assets\images\chili.png" alt=""></h1>
     <h2 class="ourh2" align="center"><h2_r>S</h2_r>tructural <h2_r>P</h2_r>riors <h2_r>i</h2_r>n 3D Diffusion Models using <h2_r>C</h2_r>ross-<h2_r>E</h2_r>ntity Attention</h2>
 
     <!-- authors and affiliations -->
@@ -251,11 +251,11 @@
                     <span class="intro-paragraph_bold">TL;DR Our method adds structural guidance to 3D diffusion models.</span><br><br>
                     This allows for generating
                     text-conditional 3D shapes that enforce task-specific structural priors from auxiliary
-                    guidance shapes (denoted by <span class="video-label-text">Guidance</span> above). Our approach supports
+                    guidance shapes (denoted by <span class="video-label-text-inpar">Guidance</span> above). Our approach supports
                     different 3D editing tasks, such as: semantic shape editing
-                    (performing semantic modifications over the input guidance shape; <span class="prompt_title_green">text colored in green above</span>),
-                    text-conditional Abstraction-to-3D (transforming primitive-based abstractions into highly expressive shapes; <span class="prompt_title_blue">text colored in blue above</span>) and 3D stylization
-                    (stylizing uncolored guidance shapes according to target text prompts; <span class="prompt_title_red">text colored in red above</span>), all enabled within seconds.
+                    (performing semantic modifications over the input guidance shape; <span class="prompt_title_green_inpar">text colored in green above</span>),
+                    text-conditional Abstraction-to-3D (transforming primitive-based abstractions into highly expressive shapes; <span class="prompt_title_blue_inpar">text colored in blue above</span>) and 3D stylization
+                    (stylizing uncolored guidance shapes according to target text prompts; <span class="prompt_title_red_inpar">text colored in red above</span>), all enabled within seconds.
                 </p>
             </div>
         </div>
@@ -290,7 +290,7 @@
 <!--        </div>-->
     </section>
 
-    <!-- abstract -->
+    <!-- interactive-section -->
     <section class="interactive-section" width="100%">
         <div class="abstract-container has-text-justified">
             <hr>
@@ -299,10 +299,10 @@
                 <tr>
                     <td align="center" width="20%">
                         <br></br>
-                        <button class="prompt_title_black" onclick="playVideo('video3', '')">Abstraction #1</button><br></br><br></br>
-                        <button class="prompt_title_black" onclick="playVideo('video2', '')">Abstraction #2</button><br></br><br></br>
-                        <button class="prompt_title_black" onclick="playVideo('video1', '')">Abstraction #3</button><br></br><br></br>
-                        <button class="prompt_title_black" onclick="playVideo('video4', '')">Abstraction #4</button><br></br>
+                        <button class="prompt_title_black_inter" onclick="playVideo('video3', '')">Abstraction #1</button><br></br><br></br>
+                        <button class="prompt_title_black_inter" onclick="playVideo('video2', '')">Abstraction #2</button><br></br><br></br>
+                        <button class="prompt_title_black_inter" onclick="playVideo('video1', '')">Abstraction #3</button><br></br><br></br>
+                        <button class="prompt_title_black_inter" onclick="playVideo('video4', '')">Abstraction #4</button><br></br>
                     </td>
                     <td align="center">
                         <video id="videoPlayer" loop autoplay  muted width="70%"  class="result-video">
@@ -311,10 +311,10 @@
                     </td>
                     <td align="center" width="25%">
                         <br></br>
-                        <button class="prompt_title_blue" onclick="switchVideo('_a')">A billiard table</button><br></br><br></br>
-                        <button class="prompt_title_blue" onclick="switchVideo('_b')">A glass table</button><br></br><br></br>
-                        <button class="prompt_title_blue" onclick="switchVideo('_c')">A ping pong table</button><br></br><br></br>
-                        <button class="prompt_title_blue" onclick="switchVideo('_d')">A round coffee table</button><br></br>
+                        <button class="prompt_title_blue_inter" onclick="switchVideo('_a')">A billiard table</button><br></br><br></br>
+                        <button class="prompt_title_blue_inter" onclick="switchVideo('_b')">A glass table</button><br></br><br></br>
+                        <button class="prompt_title_blue_inter" onclick="switchVideo('_c')">A ping pong table</button><br></br><br></br>
+                        <button class="prompt_title_blue_inter" onclick="switchVideo('_d')">A round coffee table</button><br></br>
                     </td>
                 </tr>
             </table>
@@ -357,7 +357,7 @@
         <div class="bib-container">
             <hr>
             <h2 align="center">BibTeX</h2>
-            <div class="code-container">
+            <div class="code-container" align="left">
                 <code>
                   @misc{<br>
                     &emsp; title={SPiC-E: Structural Priors in 3D Diffusion Models using Cross-Entity Attention}, <br>
@@ -433,6 +433,7 @@ const swiper = new Swiper('.swiper', {
         if (currentSuffix === newSuffix) return
         playVideo(currentVideo, newSuffix);
     }
+	
 </script>
 
 </body></html>
