--- a/index.html
+++ b/index.html
@@ -294,30 +294,46 @@
     <section class="interactive-section" width="100%">
         <div class="abstract-container has-text-justified">
             <hr>
-            <h2 align="center">Examples of Text-conditional Abstraction-to-3D Results</h2>
+            <h2 align="center">Examples of Text-conditional Abstraction-to-3D Results</h2><br></br>
             <table class="interactive-table" width="100%" align="center">
                 <tr>
-                    <td align="center" width="25%">
-                        <br></br>
-                        <button class="prompt_title_black_small" onclick="playVideo('video3', '')">Abstraction #1</button><br></br><br></br>
-                        <button class="prompt_title_black_small" onclick="playVideo('video2', '')">Abstraction #2</button><br></br><br></br>
-                        <button class="prompt_title_black_small" onclick="playVideo('video1', '')">Abstraction #3</button><br></br><br></br>
-                        <button class="prompt_title_black_small" onclick="playVideo('video4', '')">Abstraction #4</button><br></br>
+                    <td align="center" width="20%">
+                        <button class="prompt_title_black_small" onclick="playVideo('video3', '')">Abstraction #1</button>
                     </td>
-                    <td align="center">
-                        <video id="videoPlayer" loop autoplay  muted width="100%"  class="result-video">
+                    <td align="center" rowspan="4" width="50%">
+                        <video id="videoPlayer" loop autoplay muted width="100%" class="result-video">
                             <source src="./webpage_assets/videos/interactive/video3.mp4" type="video/mp4">
                         </video>
                     </td>
-                    <td align="center" width="25%">
-                        <br></br>
-                        <button class="prompt_title_blue_small" onclick="switchVideo('_a')">A billiard table</button><br></br><br></br>
-                        <button class="prompt_title_blue_small" onclick="switchVideo('_b')">A glass table</button><br></br><br></br>
-                        <button class="prompt_title_blue_small" onclick="switchVideo('_c')">A ping pong table</button><br></br><br></br>
-                        <button class="prompt_title_blue_small" onclick="switchVideo('_d')">A round coffee table</button><br></br>
+                    <td align="center" width="30%">
+                        <button class="prompt_title_blue_small" onclick="switchVideo('_a')">A billiard table</button>
                     </td>
                 </tr>
-            </table>
+                <tr>
+                    <td align="center" width="20%">
+                        <button class="prompt_title_black_small" onclick="playVideo('video2', '')">Abstraction #2</button>
+                    </td>
+                    <td align="center" width="30%">
+                        <button class="prompt_title_blue_small" onclick="switchVideo('_b')">A glass table</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center" width="20%">
+                        <button class="prompt_title_black_small" onclick="playVideo('video1', '')">Abstraction #3</button>
+                    </td>
+                    <td align="center" width="30%">
+                        <button class="prompt_title_blue_small" onclick="switchVideo('_c')">A ping pong table</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center" width="20%">
+                        <button class="prompt_title_black_small" onclick="playVideo('video4', '')">Abstraction #4</button>
+                    </td>
+                    <td align="center" width="30%">
+                        <button class="prompt_title_blue_small" onclick="switchVideo('_d')">A round coffee table</button>
+                    </td>
+                </tr>
+            </table>            
             <span class="interactive_bold">Select a guidance primitive-based abstraction (on the left) and then select one of the text prompts (on the right) to view the tables generated with our method.</span>
 			<br>
             <span class="interactive_bold">As illustrated in this interactive visualization, SPiC-E allows for enforcing structural priors while conveying the target text prompt.</span>
