--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
           <!-- arxiv link -->
           <span class="link-block">
-            <a href="" class="paper-link" style="display: inline-block">
+            <a href="http://arxiv.org/abs/2311.17834" class="paper-link" style="display: inline-block">
                 <button class="button">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -334,7 +334,8 @@
                     </td>
                 </tr>
             </table>            
-            <span class="interactive_bold">Select a guidance primitive-based abstraction (on the left) and then select one of the text prompts (on the right) to view the tables generated with our method.</span>
+            <span class="interactive_bold">Select a guidance primitive-based abstraction (on the left) and then select
+                one of the text prompts (on the right) to view structure and text conditional tables generated with our method.</span>
 			<br>
             <span class="interactive_bold">As illustrated in this interactive visualization, SPiC-E allows for enforcing structural priors while conveying the target text prompt.</span>
         </div>
@@ -376,10 +377,14 @@
             <h2 align="center">BibTeX</h2>
             <div class="code-container" align="left">
                 <code>
-                  @misc{<br>
-                    &emsp; title={SPiC-E: Structural Priors in 3D Diffusion Models using Cross-Entity Attention}, <br>
+                  @misc{sella2023spice, <br>
+                &emsp;   &emsp; title={SPiC-E: Structural Priors in 3D Diffusion Models using Cross-Entity Attention}, <br>
                 &emsp;   &emsp; author={Etai Sella and Gal Fiebelman and Noam Atia and Hadar Averbuch-Elor}, <br>
                 &emsp;   &emsp; year={2023}, <br>
+                &emsp;   &emsp; eprint={2311.17834},<br>
+                &emsp;   &emsp; archivePrefix={arXiv},<br>
+                &emsp;   &emsp; primaryClass={cs.CV}<br>
+
                   }
                 </code>
             </div>
