--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                     <td align="center" width="25%">
                         <button class="prompt_title_black_small" onclick="playVideo('video3', '')">Abstraction #1</button>
                     </td>
-                    <td align="center" rowspan="4" width="40%">
+                    <td align="center" rowspan="4" width="40%" style="height: 320px;">
                         <video id="videoPlayer" loop autoplay muted width="100%" class="result-video">
                             <source src="./webpage_assets/videos/interactive/video3.mp4" type="video/mp4">
                         </video>
@@ -335,9 +335,8 @@
                 </tr>
             </table>            
             <span class="interactive_bold">Select a guidance primitive-based abstraction (on the left) and then select
-                one of the text prompts (on the right) to view structure and text conditional tables generated with our method.</span>
-			<br>
-            <span class="interactive_bold">As illustrated in this interactive visualization, SPiC-E allows for enforcing structural priors while conveying the target text prompt.</span>
+                one of the text prompts (on the right) to view structure and text conditional tables generated with our method.
+                As illustrated in this interactive visualization, SPiC-E allows for enforcing structural priors while conveying the target text prompt.</span>
         </div>
     </section>
 
