--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
             </table>
             <br></br>               
             <span class="interactive_bold">Select a guidance primitive-based abstraction and then select
-                one of the text prompts to view structure and text conditional tables generated with our method.
+                one of the text prompts to view structure and text conditional tables generated with our method. <br>
                 As illustrated in this interactive visualization, SPiC-E allows for enforcing structural priors while conveying the target text prompt.</span>
         </div>
     </section>
