--- a/index.html
+++ b/index.html
@@ -212,12 +212,12 @@
             <table class="slide-table" width="100%" align="center">
                 <tbody>
                     <tr>
-                        <th colspan="2" width="90%" class="prompt_title_green" align="center">The backrest is solid and does not have an opening</th>
+                        <th colspan="2" width="90%" class="prompt_title_green" align="center">The seat has a rounded edge</th>
                     </tr>
                     <tr>
                         <td colspan="2">
                             <video loop autoplay  muted width="95%"  class="result-video">
-                                <source src="webpage_assets/videos/back.mp4" type="video/mp4">
+                                <source src="webpage_assets/videos/round.mp4" type="video/mp4">
                             </video>
                         </td>
                     </tr>
